--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,30 +5,28 @@
 {% endblock %}
 
 {% block navbar %}
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default" role="navigation">
          <div class="container">
-            <div class="col-lg-10 col-lg-offset-1">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="/">
-                        Ocean
-                    </a>
-                </div>
+             <div class="navbar-header">
+                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                     <span class="sr-only">Toggle navigation</span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                 </button>
+                 <a class="navbar-brand" href="/">
+                     Ocean
+                 </a>
+             </div>
 
-                <div class="navbar-collapse collapse navbar-right">
-                    <ul class="nav navbar-nav">
-                        <li><a href="/">首页</a></li>
-                        <li><a href="">资料</a></li>
-                        <li><a href="">登录</a></li>
-                        <li></li>
-                    </ul>
-                </div>
-            </div>
+             <div class="navbar-collapse collapse navbar-right">
+                 <ul class="nav navbar-nav">
+                     <li><a href="/">首页</a></li>
+                     <li><a href="">资料</a></li>
+                     <li><a href="">登录</a></li>
+                     <li></li>
+                 </ul>
+             </div>
          </div>
     </nav>
 {% endblock %}
