--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,12 +23,25 @@
                  <ul class="nav navbar-nav">
                      <li><a href="/">首页</a></li>
                      <li><a href="">资料</a></li>
-                     <li><a href="">登录</a></li>
+                     <li><a href="{{ url_for('auth.register') }}">注册</a></li>
                      <li></li>
                  </ul>
              </div>
          </div>
     </nav>
+{% endblock %}
+
+{% block content %}
+<div class="container">
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+    </div>
+    {% endfor %}
+
+    {% block page_content %}{% endblock %}
+</div>
 {% endblock %}
 
 {% block scripts %}
