--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                  </button>
-                 <a class="navbar-brand" href="/">
+                 <a class="navbar-brand" href="{{ url_for('main.index') }}">
                      Ocean
                  </a>
              </div>
@@ -23,7 +23,13 @@
                  <ul class="nav navbar-nav">
                      <li><a href="/">首页</a></li>
                      <li><a href="">资料</a></li>
-                     <li><a href="{{ url_for('auth.register') }}">注册</a></li>
+
+                     {% if current_user.is_authenticated %}
+                         <li><a href="{{ url_for('auth.logout') }}">退出</a></li>
+                     {% else %}
+                         <li><a href="{{ url_for('auth.login') }}">登陆</a></li>
+                     {% endif %}
+
                      <li></li>
                  </ul>
              </div>
