--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+    {{ super() }}
     <div class="container">
         <div class="page-header">
             <h1>你好</h1>
