--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,7 +31,18 @@
                      <li><a href="">资料</a></li>
 
                      {% if current_user.is_authenticated %}
-                         <li><a href="{{ url_for('auth.logout') }}">退出</a></li>
+                         <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                               aria-haspopup="true" aria-expanded="false">
+                                {{ current_user.user_name }}<span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">个人主页</a></li>
+                                <li><a href="#">账号</a></li>
+                                <li><a href="#">我的收藏</a></li>
+                                <li><a href="{{ url_for('auth.logout') }}">退出</a></li>
+                            </ul>
+                         </li>
                      {% else %}
                          <li><a href="{{ url_for('auth.login') }}">登陆</a></li>
                      {% endif %}
