--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -9,7 +9,7 @@
         <h3>你的账号还未确认</h3>
         <p>
             访问Ocean需要你确认你的账号
-            请检查你邮箱{{ current_user.user_email }}的收件夹或垃圾箱
+            请检查你的邮箱{{ current_user.user_email }}
         </p>
         <p>
             <a href="{{ url_for('auth.resend_confirmation') }}">
