--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,7 +37,7 @@
                                 {{ current_user.user_name }}<span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">个人主页</a></li>
+{#                                <li><a href="{{ url_for('main.profile', username=current_user.user_name) }}">个人主页</a></li>#}
                                 <li><a href="#">账号</a></li>
                                 <li><a href="#">我的收藏</a></li>
                                 <li><a href="{{ url_for('auth.logout') }}">退出</a></li>
