--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -4,9 +4,21 @@
     <div class="container-fluid box-shadow page-header-no-bottom">
         <div class="row-fluid">
             <div class="col-md-2">
-                <img alt="140x140" src="{{ url_for('static', filename='ocean_logo_1000.png') }}"
-                     class="img-rounded center-block" width="150"/>
+                <div class="img-mask">
+                    <figure class="effect-avatar">
+                        <img src="{{ url_for('static', filename='ocean_logo_100.png') }}"
+                             class="img-rounded center-block" width="140" alt="ddd"/>
+                        <figcaption>
+                            <p>修改头像</p>
+                        </figcaption>
+                    </figure>
+                </div>
                 <br/>
+                <form method=POST enctype=multipart/form-data hidden="hidden"
+                      action="{{ url_for('main.profile', user_name=user.user_name) }}">
+                    <input type=file name=photo class="btn btn-default" id="upload-file">
+                    <input type=submit class="btn btn-default">
+                </form>
                 <p class="text-center">
                     {{ user.user_name }}
                 </p>
@@ -29,4 +41,18 @@
             <button class="btn btn-block btn-info" type="button">编辑个人资料</button>
         </div>
     </div>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    <script>
+    $(document).ready(function(){
+        $('#upload-file').change(function () {
+            $(this).closest('form').submit();
+        });
+        $('.img-mask').click(function () {
+            $('#upload-file').trigger('click');
+        })
+    })
+    </script>
 {% endblock %}
