--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,6 +1,3 @@
-.user-info-sink {
-    margin-top: 140px;
-}
 
 .box-shadow {
     -webkit-box-shadow: 0 0 3px rgba(105, 105, 105, .6);
@@ -9,6 +6,7 @@
 }
 
 .page-header-no-bottom {
+    position: relative;
     padding-top: 20px;
     padding-bottom: 9px;
     margin: 40px 0 20px;
@@ -17,6 +15,7 @@
 .img-mask {
     width: 140px;
     height: 140px;
+    margin: auto;
     border-radius: 6px;
     -webkit-transition: opacity 0.5s, -webkit-transform 0.5s, background-color 0.5s;
     transition: opacity 0.5s, transform 0.5s, background-color 0.5s;
@@ -30,21 +29,21 @@
     transform: scale3d(1, 1, 1);
 }
 
-figure.effect-avatar img {
+.effect-avatar img {
     -webkit-transition: opacity 0.5s, -webkit-transform 0.5s, color 0.5s;
     transition: opacity 0.5s, transform 0.5s, color 0.5s;
     -webkit-transform: scale3d(0.95, 0.95, 1);
     transform: scale3d(0.95, 0.95, 1);
 }
 
-figure.effect-avatar:hover img {
+.effect-avatar:hover img {
     opacity: 0.3;
     color: rgba(0, 0, 0, 0.58);
     -webkit-transform: scale3d(1, 1, 1);
     transform: scale3d(1, 1, 1);
 }
 
-figure.effect-avatar p {
+.effect-avatar p {
     position: absolute;
 	right: 0;
 	bottom: 0;
@@ -58,8 +57,15 @@ figure.effect-avatar p {
 	transition: opacity 0.35s;
 }
 
-figure.effect-avatar:hover p {
+.effect-avatar:hover p {
     opacity: 1;
     -webkit-transition-delay: 0.1s;
     transition-delay: 0.1s;
+}
+
+
+.position-abs-bottom{
+    position: absolute;
+    top: 0;
+    right: 0;
 }
