--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+    Ocean - 个人资料
+{% endblock %}
+
 {% block page_content %}
     <div class="container-fluid box-shadow page-header-no-bottom">
 
