--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,7 +39,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="{{ url_for('main.profile', user_name=current_user.user_name) }}">个人主页</a></li>
-                                <li><a href="#">账号</a></li>
+                                <li><a href="{{ url_for('auth.account') }}">账号</a></li>
                                 <li><a href="#">我的收藏</a></li>
                                 <li><a href="{{ url_for('auth.logout') }}">退出</a></li>
                             </ul>
