--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -13,7 +13,7 @@
                     <div class="img-mask center-block">
                         <figure class="effect-avatar">
                             <img src="{{ user_avatar_url }}"
-                                 class="img-rounded center-block" width="140" alt="ddd"/>
+                                 class="img-rounded center-block" width="140" alt="{{ user.user_name }}"/>
                             <figcaption>
                                 <p>修改头像</p>
                             </figcaption>
