--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -82,3 +82,14 @@
     border-bottom: 1px solid #eee;
     overflow: hidden;
 }
+
+/*post*/
+ul.posts{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+ul.posts li{
+    margin: 20px 0;
+}
