--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -76,7 +76,7 @@
     right: 0;
 }
 
-.account-line{
+.account-line {
     padding-bottom: 20px;
     margin: 30px 0;
     border-bottom: 1px solid #eee;
@@ -84,12 +84,81 @@
 }
 
 /*post*/
-ul.posts{
+ul.posts {
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
 
-ul.posts li{
+ul.posts li {
     margin: 20px 0;
+}
+
+li.padding-post {
+    padding: 10px 20px;
+}
+
+div.post-header {
+    position: relative;
+    overflow: hidden;
+}
+
+div.post-header-author {
+    float: left;
+}
+
+div.post-header-timestamp {
+    float: right;
+}
+
+div.post-title h3 {
+    margin: 10px 0;
+    font-size: 26px;
+}
+
+div.post-body {
+    position: relative;
+    height: 100px;
+    cursor: pointer;
+    z-index: 3;
+}
+
+.post-body p {
+    margin: 0;
+}
+
+div.post-body-mask {
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    height: 50px;
+    z-index: 1;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #ffffff);
+}
+
+p.post-body-link {
+    position: absolute;
+    bottom: 0;
+    padding-top: 80px;
+    height: 100px;
+    width: 100%;
+    margin: 0 auto;
+    z-index: 2;
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: 0.5s;
+    -moz-transition: all 0.5s linear;
+    -ms-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
+    transition: all 0.5s linear;
+}
+
+div.post-body:hover p.post-body-link{
+    visibility: visible;
+    opacity: 1;
+}
+
+p.post-body-content {
+    height: 92px;
+    overflow: hidden;
 }
