新增requirements 新增forgery虚拟数据用户及文章生成User.user_about_me改为512位
用户头像地址的拼接放入模板而非视图
全局a标签改灰
只有一页时不显示分页栏
个人资料中显示用户文章

yiyuhao
2017年7月15日 15:26:46

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,3 +1,23 @@
+/*a标签样式*/
+a {
+    text-decoration: none
+}
+
+a.grey:link {
+    color: #999999;
+}
+
+a.grey:visited {
+    color: #999999;
+}
+
+a.grey:hover {
+    color: #000000
+}
+
+a.grey:active {
+    color: #999999
+}
 
 .box-shadow {
     -webkit-border-radius: 2px;
@@ -19,6 +39,7 @@
     margin: 40px 0 20px;
 }
 
+/*图片半透明遮罩层*/
 .img-mask {
     width: 140px;
     height: 140px;
@@ -153,7 +174,7 @@ p.post-body-link {
     transition: all 0.5s linear;
 }
 
-div.post-body:hover p.post-body-link{
+div.post-body:hover p.post-body-link {
     visibility: visible;
     opacity: 1;
 }
