--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -15,7 +15,7 @@
             <br>
             <p>
                 新用户？
-                <a href="{{ url_for('auth.register') }}">点击注册</a>
+                <a class="grey" href="{{ url_for('auth.register') }}">点击注册</a>
             </p>
         </div>
     </div>
