--- a/app/templates/post/_posts.html
+++ b/app/templates/post/_posts.html
@@ -3,15 +3,23 @@
         <li class="box-shadow padding-post">
 
             <div class="post-header">
+
                 <div class="post-header-author">
-                    <a href="{{ url_for('main.profile', user_name=post.user.user_name) }}">
+                    {# 头像 #}
+                    <a class="grey" href="{{ url_for('main.profile', user_name=post.user.user_name) }}">
                         <img src="{{ url_for('static', filename="{subpath}/{filename}".format(subpath=current_app.config['USER_AVATAR_SUBPATH'],
-                                                                                                      filename=post.user.user_avatar_hash)) }}"
-                             width="20" alt="{{ current_user.user_name }}"
+                                                                                       filename=post.user.user_avatar_hash)) }}"
+                             width="16" alt="{{ current_user.user_name }}"
                              class="img-rounded">
                     </a>
-                    <span class="post-header-author-name">{{ post.user.user_name }}，</span>
-                    <span class="post-header-author-about-me">{{ post.user.user_about_me }}</span>
+                    {# 昵称 #}
+                    <a class="grey" href="{{ url_for('main.profile', user_name=post.user.user_name) }}">
+                        {{ post.user.user_name }}
+                    </a>
+                    {# 简介 #}
+                    {% if post.user.user_about_me %}
+                        <span>，{{ post.user.user_about_me }}</span>
+                    {% endif %}
                 </div>
                 <div class="post-header-timestamp">{{ moment(post.post_create_time).fromNow(refresh=True) }}</div>
             </div>
@@ -23,18 +31,18 @@
             <div class="post-body">
                 <p class="post-body-content">{{ post.post_body }}</p>
                 <p class="text-center post-body-link">
-                    <a href="#">点击打开文章</a>
+                    <a class="grey" href="#">点击打开文章</a>
                 </p>
                 {# 半透明遮罩层 #}
                 <div class="post-body-mask"></div>
             </div>
 
             <div class="post-footer">
-                <a href="#">
+                <a class="grey" href="#">
                     <span class="glyphicon glyphicon-triangle-top"></span>{{ post.post_upvote }}
                 </a>
                 &nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="#">
+                <a class="grey" href="#">
                     <span class="glyphicon glyphicon-comment"></span>33条评论
                 </a>
             </div>
