--- a/app/templates/user/account.html
+++ b/app/templates/user/account.html
@@ -20,7 +20,7 @@
         </div>
         <div class="account-line">
             <div class="col-lg-4">
-                <p><a data-toggle="collapse" href="#changeEmail" aria-expanded="false" aria-controls="changeEmail">
+                <p><a class="grey" data-toggle="collapse" href="#changeEmail" aria-expanded="false" aria-controls="changeEmail">
                     登陆邮箱 <span class="glyphicon glyphicon-pencil"></span>
                 </a></p>
             </div>
@@ -37,7 +37,7 @@
             </div>
             <div class="account-line">
                 <div class="col-lg-4">
-                    <p><a data-toggle="collapse" href="#changePwd" aria-expanded="false" aria-controls="changePwd">
+                    <p><a class="grey" data-toggle="collapse" href="#changePwd" aria-expanded="false" aria-controls="changePwd">
                         修改密码 <span class="glyphicon glyphicon-pencil"></span>
                     </a></p>
                 </div>
