--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -12,7 +12,7 @@
             请检查你的邮箱{{ current_user.user_email }}
         </p>
         <p>
-            <a href="{{ url_for('auth.resend_confirmation') }}">
+            <a class="grey" href="{{ url_for('auth.resend_confirmation') }}">
                 点击再次发送确认邮件
             </a>
         </p>
