--- a/app/templates/macros/_macro_pagination_widget.html
+++ b/app/templates/macros/_macro_pagination_widget.html
@@ -1,37 +1,44 @@
 {% macro pagination_widget(pagination, endpoint) %}
 
-<ul class="pagination">
-    {% if pagination.has_prev %}
-        <li>
-            <a href="{{ url_for(endpoint, page = pagination.page - 1, **kwargs) }}">&laquo;</a>
-        </li>
-    {% else %}
-        <li class="disabled">
-            <a href="#">&laquo;</a>
-        </li>
-    {% endif %}
+    {# 只有一页不显示分页栏 #}
+    {% if pagination.has_prev or pagination.has_next %}
+        <ul class="pagination">
 
-    {% for p in pagination.iter_pages() %}
-        {% if p %}
-            <li{% if p == pagination.page %} class="active"{% endif %}>
-                <a href="{{ url_for(endpoint, page = p, **kwargs) }}">{{ p }}</a>
-            </li>
-        {% else %}
-            <li class="disabled">
-                <a href="#">&hellip;</a>
-            </li>
-        {% endif %}
-    {% endfor %}
+            {# 上一页 #}
+            {% if pagination.has_prev %}
+                <li>
+                    <a href="{{ url_for(endpoint, page = pagination.page - 1, **kwargs) }}">&laquo;</a>
+                </li>
+            {% else %}
+                <li class="disabled">
+                    <a href="#">&laquo;</a>
+                </li>
+            {% endif %}
 
-    {% if pagination.has_next %}
-        <li>
-            <a href="{{ url_for(endpoint, page = pagination.page + 1, **kwargs) }}">&raquo;</a>
-        </li>
-    {% else %}
-        <li class="disabled">
-            <a href="#">&raquo;</a>
-        </li>
+            {# 页签 #}
+            {% for p in pagination.iter_pages() %}
+                {% if p %}
+                    <li{% if p == pagination.page %} class="active"{% endif %}>
+                        <a href="{{ url_for(endpoint, page = p, **kwargs) }}">{{ p }}</a>
+                    </li>
+                {% else %}
+                    <li class="disabled">
+                        <a href="#">&hellip;</a>
+                    </li>
+                {% endif %}
+            {% endfor %}
+
+            {# 下一页 #}
+            {% if pagination.has_next %}
+                <li>
+                    <a href="{{ url_for(endpoint, page = pagination.page + 1, **kwargs) }}">&raquo;</a>
+                </li>
+            {% else %}
+                <li class="disabled">
+                    <a href="#">&raquo;</a>
+                </li>
+            {% endif %}
+        </ul>
     {% endif %}
-</ul>
 
 {% endmacro %}
