新增：     支持ckeditor富文本编辑器-于首页文章编写     新编写工具 utils/html_to_text.py及其单元测试     新增Post.post_body_html sqlalchemy监听事件
修改：
    Post模型改变：post_body==>post_body_html 增加post_body_text字段

yiyuhao
2017年7月15日 22:34:14

--- a/app/templates/post/_posts.html
+++ b/app/templates/post/_posts.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="post-body">
-                <p class="post-body-content">{{ post.post_body }}</p>
+                <p class="post-body-content">{{ post.post_body_text }}</p>
                 <p class="text-center post-body-link">
                     <a class="grey" href="#">点击打开文章</a>
                 </p>
