--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,11 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "macros/_macro_pagination_widget.html" as macros %}
 
+{% block head %}
+    {{ super() }}
+    <script src="//cdn.ckeditor.com/4.4.6/standard/ckeditor.js"></script>
+{% endblock %}
+
 {% block body %}
     {# start - 写文章motal#}
     <div class="modal fade" id="writeArticleDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -19,7 +24,7 @@
                     <form class="form" method="post">
                         {{ form.hidden_tag() }}
                         {{ wtf.form_field(form.post_title) }}
-                        {{ wtf.form_field(form.post_body, style="min-height: 380px") }}
+                        {{ wtf.form_field(form.post_body, class="ckeditor", style="min-height: 380px") }}
                         {{ wtf.form_field(form.submit, class="form-submit", hidden="hidden") }}
                     </form>
                 </div>
