新增： 文章编辑功能
修改：
ckeditor导入顺序提前，head中加入script(自适应调用不同版本ckeditor)

重重的一次踩坑说明：
1、表单的textarea设置height属性会被ckeditor创建的文本域覆盖啊！
2、这时想办法设置ckeditor的textarea，height为百分比高度
3、刚开始将导入不同版本ckeditor的script放在body中，window.onload时ckeditor.js还没有加载完啊！！
4、将导入不同版本ckeditor的代码放在head中。但是window.onload时ckeditor.js还是没加载完啊！！
5、这时尝试各种办法，<script>添加onload属性但没用啊！写一个函数检查js动态加载完成没效果啊！
5、谷歌到的大部分方法根本没用啊！！
6、通过CKEDITOR自身的方法，更改height为百分比根本没用啊！！！
7、最终，获取窗口的大小，按照大于600判断为大屏，获取高度的55%；小于等于600的判断为小屏，获取窗口大小的35%
8、坑啊！！睡觉！！

yiyuhao
2017年7月17日 01:38:23

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -33,8 +33,8 @@ a.grey:active {
 }
 
 .page-header-profile {
-  margin: 20px 0;
-  border-bottom: 1px solid #eee;
+    margin: 20px 0;
+    border-bottom: 1px solid #eee;
 }
 
 .page-header-no-bottom {
@@ -135,6 +135,24 @@ div.post-header-author {
 
 div.post-header-timestamp {
     float: right;
+}
+
+div.post-header-edit-post {
+    float: right;
+    margin-right: 10px;
+    z-index: 4;
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: 0.5s;
+    -moz-transition: all 0.5s linear;
+    -ms-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
+    transition: all 0.5s linear;
+}
+
+li.box-shadow:hover div.post-header-edit-post {
+    visibility: visible;
+    opacity: 1;
 }
 
 div.post-title h3 {
