--- a/app/templates/errors/403.html
+++ b/app/templates/errors/403.html
@@ -1,8 +1,12 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    Ocean - 403 没有权限
+{% endblock %}
+
 {% block page_content %}
     <div class="page-header">
         <h1>禁止访问</h1>
     </div>
-    <p>你没有权限访问这个资源</p>
+    <p>你没有权限访问资源，或进行这个操作</p>
 {% endblock %}
