--- a/app/templates/post/_posts.html
+++ b/app/templates/post/_posts.html
@@ -20,7 +20,22 @@
                         <span>，{{ post.user.user_about_me }}</span>
                     {% endif %}
                 </div>
+                {# 修改时间 #}
                 <div class="post-header-timestamp">{{ moment(post.post_create_time).fromNow(refresh=True) }}</div>
+                {# 编辑按钮 #}
+                {% if current_user == post.user %}
+                    <div class="post-header-edit-post">
+                        <a class="grey" href="{{ url_for('main.edit_post', post_id=post.post_id) }}" target="_blank">
+                            编辑文章
+                        </a>
+                    </div>
+                {% elif current_user.is_administrator %}
+                    <div class="post-header-edit-post">
+                        <a class="grey" href="#" target="_blank">
+                            [Admin]编辑文章
+                        </a>
+                    </div>
+                {% endif %}
             </div>
 
             {# 文章题目 #}
@@ -29,7 +44,8 @@
             </div>
 
             {# 文章缩略 #}
-            <div class="post-body" onClick="javascript:window.open('{{ url_for('main.post', post_id=post.post_id) }}','_blank')">
+            <div class="post-body"
+                 onClick="javascript:window.open('{{ url_for('main.post', post_id=post.post_id) }}','_blank')">
                 <p class="post-body-content">{{ post.post_body_text }}</p>
                 <p class="text-center post-body-link">
                     <a class="grey" href="{{ url_for('main.post', post_id=post.post_id) }}" target="_blank">
