修改：post梗概中可点击title前往文章页面
yiyuhao
2017年7月17日 01:57:49

--- a/app/templates/post/post.html
+++ b/app/templates/post/post.html
@@ -49,7 +49,11 @@
 
                 {# 文章题目 #}
                 <div class="post-title">
-                    <h2 align="center">{{ post.post_title }}</h2>
+                    <h2 align="center">
+                        <a class="black" href="{{ url_for('main.post', post_id=post.post_id) }}" target="_blank">
+                            {{ post.post_title }}
+                        </a>
+                    </h2>
                 </div>
 
                 {# 文章内容 #}
