--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -19,6 +19,26 @@ a.grey:active {
     text-decoration: none;
 }
 
+a.black:link {
+    color: #000000;
+    text-decoration: none;
+}
+
+a.black:visited {
+    color: #000000;
+    text-decoration: none;
+}
+
+a.black:hover {
+    color: #999999;
+    text-decoration: none;
+}
+
+a.black:active {
+    color: #000000;
+    text-decoration: none;
+}
+
 .box-shadow {
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
