--- a/app/templates/post/_posts.html
+++ b/app/templates/post/_posts.html
@@ -40,7 +40,11 @@
 
             {# 文章题目 #}
             <div class="post-title">
-                <h3>{{ post.post_title }}</h3>
+                <h3>
+                    <a class="black" href="{{ url_for('main.post', post_id=post.post_id) }}" target="_blank">
+                        {{ post.post_title }}
+                    </a>
+                </h3>
             </div>
 
             {# 文章缩略 #}
